--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ crashlytics-build.properties
 
 
 Pathfinding Algorithms/.vsconfig
+
+Pathfinding Algorithms/Pathfinding Algorithms.sln.DotSettings
